<resources>
    <string name="app_name">PocketHepia</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logout">Logout</string>

    <string name="title_transactions">Transactions</string>
    <string name="title_access">Access</string>
    <string name="title_books">Books</string>
    <string name="title_admin">Admin</string>
    <string name="no_user">No User</string>

    <string name="add_nfc_tag">Assign NFC Card</string>
    <string name="tap_tag_to_assign">Tap a tag to assign it</string>
    <string name="no_card_assigned">No card assigned</string>
    <string name="card_assigned">Card assigned</string>
    <string name="problem_card_assign">There was a problem assigning the card</string>
    <string name="remove_nfc_card">Remove NFC card</string>
    <string name="problem_deleting_card">There was a problem deleting the card</string>
    <string name="card_delete_ok">Card deleted successfully</string>
    <string name="administrator">Administrator</string>
    <string name="librarian">Librarian</string>
    <string name="accepts_payments">Accepts payments</string>
    <string name="auditor">Auditor</string>
    <string name="can_invite">Can invite</string>
    <string name="sending_money">Sending money</string>
    <string name="complete_payment">Complete payment</string>
    <string name="CHF_currency">CHF</string>
    <string name="receiving_money">Receiving money</string>
    <string name="no_transaction">No transaction</string>
    <string name="payment_description_hint">Payment description</string>
    <string name="problem_payment">There was a problem with the payment</string>
    <string name="payment_ok">Payment successful</string>
    <string name="no_access">No access</string>
    <string name="search">Search</string>
    <string name="timeRangeTemplate">Between %1$s and %2$s</string>
    <string name="fromDateTemplate">From %1$s</string>
    <string name="toDateTemplate">to %1$s</string>
    <string name="you_have_no_accesses">You have no accesses</string>
    <string name="you_have_no_transactions">You have no transactions</string>

</resources>
