<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/money"
        android:title="@string/title_transactions"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/navigation_access"
        android:icon="@drawable/key"
        android:title="@string/title_access"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/navigation_books"
        android:icon="@drawable/book"
        android:title="@string/title_books"
        app:showAsAction="ifRoom|withText" />
</menu>
