<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/payment_amount"
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="0.00"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                tools:ignore="HardcodedText" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/CHF_currency"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </LinearLayout>

        <EditText
            android:id="@+id/payment_title"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/payment_description_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="2dp"
            android:id="@+id/sending_money_choice_layout">
            <TextView
                android:id="@+id/sending_money_switch_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sending_money"
                style="@style/TextAppearance.MaterialComponents.Body1"/>

            <Switch
                android:id="@+id/sending_money_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumbTint="@color/colorPrimary"
                android:checked="true"/>
        </LinearLayout>

        <android.support.design.button.MaterialButton
            android:id="@+id/complete_payment_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete_payment"
            app:backgroundTint="@color/colorPrimary"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>